fix uppy contrast again

--- a/apps/dashboard/app/assets/stylesheets/application.scss
+++ b/apps/dashboard/app/assets/stylesheets/application.scss
@@ -216,7 +216,7 @@ small.form-text {
 .uppy-Dashboard-note, a.uppy-Dashboard-poweredBy, .uppy-Dashboard-Item-status {
   color: #6a6a6a;
 }
-
-.uppy-StatusBar.is-waiting, .uppy-StatusBar-actionBtn--upload {
-  color: rgb(66, 130, 66);
+ 
+.uppy-StatusBar.is-waiting .uppy-StatusBar-actionBtn--upload {
+  background-color: rgb(66, 130, 66);
 }
